[package]
name = "devbit"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8"}
tokio = {version = "1.50.0",features = ["full"]}
sqlx = {version = "0.8.6",features = ["runtime-tokio","postgres"]}
serde = {version = "1.0.228"}
rand = {version = "0.10.0"}
resend-rs = {version = "0.22.0"}