[package]
name = "devbit"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8"}
tokio = {version = "1.50.0",features = ["full"]}
sqlx = {version = "0.8.6",features = ["runtime-tokio","postgres"]}
serde = {version = "1.0.228"}
rand = {version = "0.10.0"}
chrono = {version = "0.4.44"}
jsonwebtoken ={version = "10.3.0"}
lettre = "0.11"
